# cpr_fmt_cmake

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
